[package]
name = "rstoni"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4.0", features = ["derive", "cargo"] }
anyhow = "^1.0"
toniefile = { git = "https://github.com/Schievel1/toniefile" }
symphonia = { version = "0.5.3", features = ["all"] }
rand = "0.8.5"
rubato = "0.12.0"
lazy_static = "1.4.0"
arrayvec = "0.7.1"
