[package]
name = "rstonie"
version = "0.1.0"
edition = "2021"
description = "rstonie is a tool to create files that can be played on a Toniebox(r) cloud player"
repository = "https://github.com/Schievel1/rstonie"
categories = [ "command-line-utilities" ]
authors = ["Pascal Jaeger <pascal.jaeger@leimstift.de>"]
license = "GPL-2.0-only"

[dependencies]
anstyle = "1.0.2"
anyhow = "^1.0"
arrayvec = "0.7.1"
clap = { version = "^4.0", features = ["derive", "cargo"] }
lazy_static = "1.4.0"
rand = "0.8.5"
rubato = "0.12.0"
symphonia = { version = "0.5.3", features = ["all"] }
toniefile = { git = "https://github.com/Schievel1/toniefile" }
